# GreenCli

./: .eslintrc.cjs  .gitignore  README.md  ROADMAP.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
docs/: SETUP.md
docs/screenshots/: README.md
e2e/: app.spec.ts
playwright-report/: index.html
scripts/: capture-screenshots.mjs
src/: App.tsx  PopOutTerminal.tsx  main.tsx  utils.test.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/api/: aruba_cx.rs  mod.rs  onprem.rs
src-tauri/src/central/: mod.rs
src-tauri/src/intent/: mod.rs
src-tauri/src/local/: client.rs  mod.rs
src-tauri/src/mcp/: client.rs  mod.rs  server.rs
src-tauri/src/serial/: client.rs  mod.rs
src-tauri/src/session/: manager.rs  mod.rs  store.rs
src-tauri/src/sftp/: mod.rs
src-tauri/src/ssh/: channel.rs  client.rs  forward.rs  keys.rs  known_hosts.rs  mod.rs  ssh_config.rs
src-tauri/src/telnet/: client.rs  mod.rs
src-tauri/src/vault/: crypto.rs  mod.rs  storage.rs
src/components/: AiAgents.tsx  AiAssistant.tsx  ApiExplorer.tsx  ApstraBrowser.tsx  BulkRunner.tsx  CentralSettings.tsx  CommandPalette.tsx  ConfigEditor.tsx  DeviceMapper.tsx  DialogHost.tsx  HelpPanel.tsx  HostsManager.tsx  IntentPanel.tsx  McpServers.tsx  QuickConnect.tsx  SearchOverlay.tsx  SettingsPanel.tsx  SftpBrowser.tsx  Sidebar.tsx  SnippetsMenu.tsx  SshAuthDialog.tsx  StatusBar.test.tsx  StatusBar.tsx  (+6 more)
(+31 files in other folders)
