[package]
name = "green-cli"
version = "1.0.0"
description = "Multi-vendor SSH/Telnet/Serial terminal for network engineers"
authors = ["ChoateLabs"]
license = "MIT"
repository = "https://github.com/Choaterboater/GreenCli"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.6.0", features = [ "window-set-focus", "window-close", "window-start-dragging", "dialog-save", "dialog-open", "fs-remove-dir", "fs-create-dir", "path-all", "fs-write-file", "fs-remove-file", "fs-exists", "fs-read-file", "fs-read-dir", "os-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-serial = "5.4"
async-trait = "0.1"
futures = "0.3"
russh = "0.43"
russh-keys = "0.43"
russh-sftp = "2.3"
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = "1"
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
serialport = "4.3"
portable-pty = "0.8"
# chrono = "0.4"  # unused
# directories-next = "2.0"  # unused
reqwest = { version = "0.12", features = ["json", "cookies"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
